[package]
name = "yukino-entity"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotation-rs = { version = "0.1" }
rust_decimal = { version = "1.6", optional = true }
time = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
iroha = "0.1.5"
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
thiserror = "1.0"
heck = "0.3"
rand = "0.8.2"

[features]
default = ["mysql", "decimal", "json", "data-time"]
mysql = []
postgre-sql = []
sqlite = []
json = ["serde_json", "serde"]
decimal = ["rust_decimal"]
data-time = ["time"]
