[package]
name = "yukino-derive"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.syn]
version = "1.0.31"

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dependencies.yukino-core]
version = "0.1.0"
path = "../yukino-core"

[dependencies.heck]
version = "0.3.1"

[lib]
proc-macro=true
