[package]
name = "yukino-test"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.yukino]
version = "0.1.0"
path = "../yukino"

[dependencies.serde_json]
version = "1.0.56"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/main.rs"
