[package]
name = "yukino"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.yui]
version = "0.1.4"

[dependencies.proc-macro2]
version = "1.0"

[dependencies.syn]
version = "1.0"
features = ["derive", "parsing", "printing", "clone-impls", "proc-macro", "extra-traits"]

[dependencies.quote]
version = "1.0"

[dependencies.rust_decimal]
version = "1.6.0"

[features]
default = ["mysql"]
mysql = []
postgre-sql = []
sqlite = []
