[package]
name = "yukino"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"

[dependencies.yukino-core]
version = "0.1.0"
path = "../yukino-core"

[dependencies.yukino-cli]
version = "0.1.0"
path = "../yukino-cli"

[dependencies.yukino-derive]
version = "0.1.0"
path = "../yukino-derive"

[lib]

[features]
default = ["mysql", "decimal"]
mysql = ["yukino-core/mysql"]
postgre-sql = ["yukino-core/postgre-sql"]
sqlite = ["yukino-core/sqlite"]
decimal = ["yukino-core/decimal"]
data-time = ["yukino-core/data-time"]
