[package]
name = "yukino-test-entity"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yukino = { path = "../../", version = "0.1.0" }
serde_json = "1.0"

[dev-dependencies]



[lib]
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"
